fix zoom z-index

--- a/src/kingoftokyo.scss
+++ b/src/kingoftokyo.scss
@@ -213,6 +213,7 @@ html, .mode_3d #game_play_area_background {
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 2;
 
     button {
       width: 40px;
